feat: add receipt controller
